# adult-game-manager

./: .gitignore  CHECKSUMS.md  LICENSE  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_unrar.cpp
app/src/main/java/com/example/f95updater/: ApkInstaller.kt  AppConfig.kt  AppDetailsProvider.kt  AppLog.kt  AppUpdater.kt  ArchiveExtractor.kt  AutoBackupManager.kt  CatalogPrefs.kt  CatalogRepository.kt  CatalogScreen.kt  CrashReporter.kt  DiagnosticsScreenshotButton.kt  EnglishTitleTranslator.kt  F95MigrationImport.kt  F95Scraper.kt  FilePickerDialog.kt  FilterPrefs.kt  FolderOpener.kt  FolderPickerDialog.kt  InstallRouting.kt  InstalledAppIgnoreRules.kt  InstalledAppsScanner.kt  JoiPlayArchiveUpgrade.kt  JoiPlayBackupReader.kt  JoiPlayExtractUi.kt  JoiPlayInstaller.kt  JoiPlayLauncher.kt  JoiPlayMetadataCatalog.kt  JoiPlayScanner.kt  JoiPlaySettings.kt  JoiPlayUnusedFolderReport.kt  JoiPlayVersionDetector.kt  JoiPlayVersionOverrides.kt  MainActivity.kt  MappingRepository.kt  MatchResearchCollector.kt  MatchingPrefs.kt  Models.kt  NonGamesDetector.kt  RenPySaveEditor.kt  (+11 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/f95updater/: AppConfigTest.kt  AppMappingTest.kt  AppUpdaterTest.kt  InstallRoutingTest.kt  InstalledSizeSortTest.kt  JoiPlayUnusedFolderReporterTest.kt  RenPySaveScannerTest.kt  SaveSearchMatcherTest.kt  SaveSyncMirrorTest.kt  SourceCatalogTest.kt
